start adding layout

--- a/client/src/app/pages/auth-page/auth-page.component.html
+++ b/client/src/app/pages/auth-page/auth-page.component.html
@@ -1,1 +1,39 @@
-<p>login-register-page works!</p>
+<form class="form" [formGroup]="form">
+  <mat-form-field class="form-field">
+    <mat-label>Email</mat-label>
+    <input
+      type="email"
+      matInput
+      formControlName="email"
+      placeholder="Ex. pat@example.com"
+    />
+
+    <mat-error *ngIf="form.get('email').hasError('email')">
+      Please enter a valid email address
+    </mat-error>
+
+    <mat-error *ngIf="form.get('email').hasError('required')">
+      Email is <strong>required</strong>
+    </mat-error>
+  </mat-form-field>
+
+  <mat-form-field class="form-field">
+    <mat-label>Password</mat-label>
+    <input
+      type="password"
+      matInput
+      formControlName="password"
+      placeholder="Ex. 12345678"
+    />
+    <mat-error *ngIf="form.get('password').hasError('minlength')">
+      Please enter a valid password
+    </mat-error>
+
+    <mat-error *ngIf="form.get('password').hasError('required')">
+      Password is <strong>required</strong>
+    </mat-error>
+  </mat-form-field>
+
+
+  <button mat-stroked-button color="primary" (click)="login()">Primary</button>
+</form>
